[FIX] align first H3 heading in main content with leading H2

--- a/Resources/Private/Scss/shame.scss
+++ b/Resources/Private/Scss/shame.scss
@@ -15,6 +15,10 @@
 	}
 }
 
+.main h2+div h3:first-child {
+	margin-top: 8px;
+}
+
 @media print {
 	.head-nav,
 	.more,
